--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.transparent{
+  background-color: rgb(43, 43, 43);
+}
+.transition {
+  transition: all 0.5s ease;
+}
+
+@layer components {
+  .menu-item {
+    @apply text-4xl p-1 border rounded-lg cursor-pointer
+  }
+  .menu-list {
+    @apply py-2 hover:text-mainColor duration-300
+  }
 }
